--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+html {
+  background-color: rgb(230, 228, 228);
+}
+
+body {
+  width: 1358px;
+  border: 1px solid red;
+  margin: auto;
+  min-height: 100vh;
+}
